syntax = "proto3";

package io.inhibitor.protobufwithrest.poc.entity.user;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.inhibitor.protobufwithrest.poc.entity.user";
option java_multiple_files = true;

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_MEMBER = 1;
  USER_TYPE_UNREGISTERED = 2;
}

message User {
  string id = 1;
  string name = 2;
  UserType type = 3;
  repeated string tags = 4;
  google.protobuf.Struct profile = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
