syntax = "proto3";

package io.inhibitor.protobufwithrest.poc.service.user;

import "common/error.proto";
import "entity/user.proto";

option java_package = "io.inhibitor.protobufwithrest.poc.service.user";
option java_multiple_files = true;

message GetUserRequest {
  message Payload {
    string id = 1;
  }

  Payload payload = 1;
}

message GetUserResponse {
  message Result {
    io.inhibitor.protobufwithrest.poc.entity.user.User user = 1;
  }

  Result result = 1;
  io.inhibitor.protobufwithrest.poc.common.error.Error error = 2;
}
